# GPT_CodeInterpreter

./: .env  .env.example  .gitignore  .replit  README.md  README_CN.md  app.py  app_cn.py  app_server.py  cli_script.py  global_value.py  globale_values.py  main.py  pyproject.toml  replit.nix  requirements.txt  temp.py  test.py
.github/workflows/: sync.yml
codebot_server/: api.py  client.py  server.py
codebot_server/ChatGPT/: ChatBot.py  ChatGPT.py  ChatGPT_Memory.py
codebot_server/plugins/python/: executor.py  functions.py
codebot_server/plugins/serverplugin_unfinsh/: functions.py
codebot_server/plugins/vue/: functions.py
cookbook/: README.md  app.py
cookbook/interpreter/: code_interpreter.py
docs/: env.md  env_cn.md  install.md  install_cn.md  replit.md  replit_cn.md
functions/: FunctionManager.py  MakeRequest.py  Python_Excutor.py  robot_functions.py  robot_functions.py.bak
image_gen/: prodia.py
language/: en.json  gettext.py  zh_CN.json
my_plugins/: app.py  index.html
plugin_client/: README.md  setup.py
plugin_client/plugin_client/: __init__.py
plugin_client/plugin_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plugins/common/: functions.py
plugins/mysql/: functions.py
plugins/python/: executor.py  functions.py
plugins/serverplugin_unfinsh/: my_apis.json
update/: update_0730.md  update_0801.md  update_0816.md  update_0825.md
