[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
requests = "^2.31.0"
uvicorn = "^0.22.0"
click = "^8.1.3"
imread = "^0.7.4"
nest-asyncio = "^1.5.6"
openai = "^0.27.8"
pyzbar = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"