[tool.poetry]
name = "repl_nix_GPTCodeInterpreter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
requests = "^2.31.0"
tiktoken = "^0.4.0"
loguru = "^0.7.0"
chainlit = "^0.5.2"
prompt_toolkit = "^3.0.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
